--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,8 @@
   <artifactId>jmeter-core</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <properties>
-<java.version>1.8</java.version>
+<maven.compiler.target>1.8</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
   </properties>
   <dependencies>
   <!-- https://mvnrepository.com/artifact/commons-cli/commons-cli -->
